5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4147/executions/1593_1802.log
== TEST (2019-03-28 11:23:43) 
-- CODE:
from math import
v = float(input("Pontos de vida: "))
vd1 =  int(input("Dado 1: "))
vd2 = int(input("Dado 2: "))
d = sqrt(5 * vd1 + pi ** vd2/3)
print(d)
-- ERROR:
File "XXXX", line 1
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:23:53) 
-- CODE:
from math import*
v = float(input("Pontos de vida: "))
vd1 =  int(input("Dado 1: "))
vd2 = int(input("Dado 2: "))
d = sqrt(5 * vd1 + pi ** vd2/3)
print(d)
-- OUTPUT:
18.04059490496645
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:24:39) 
-- CODE:
from math import*
v = float(input("Pontos de vida: "))
vd1 =  int(input("Dado 1: "))
vd2 = int(input("Dado 2: "))
d = sqrt(5 * vd1) + pi ** vd2/3
print(d)
-- OUTPUT:
322.6991325026012
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:25:04) 
-- CODE:
from math import*
v = float(input("Pontos de vida: "))
vd1 =  int(input("Dado 1: "))
vd2 = int(input("Dado 2: "))
d = sqrt(5 * vd1) + pi ** vd2 / 3
print(d)
-- OUTPUT:
322.6991325026012
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:26:11) 
-- CODE:
from math import*
v = float(input("Pontos de vida: "))
vd1 =  int(input("Dado 1: "))
vd2 = int(input("Dado 2: "))
d = sqrt(5 * vd1) + pi ** vd2 / 3
print(d,%)
-- ERROR:
File "XXXX", line 6
    print(d,%)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:26:37) 
-- CODE:
from math import*
v = float(input("Pontos de vida: "))
vd1 =  int(input("Dado 1: "))
vd2 = int(input("Dado 2: "))
d = int(sqrt(5 * vd1) + pi ** vd2 / 3)
print(d)
-- OUTPUT:
322
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:28:53) 
-- CODE:
from math import*
v = float(input("Pontos de vida: "))
vd1 =  int(input("Dado 1: "))
vd2 = int(input("Dado 2: "))
d = int(sqrt(5 * vd1) + (pi ** vd2 / 3))
print(d)
-- OUTPUT:
322
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:29:05) 
-- CODE:
from math import*
v = float(input("Pontos de vida: "))
vd1 =  int(input("Dado 1: "))
vd2 = int(input("Dado 2: "))
d = int(sqrt(5 * vd1) + (pi ** vd2 / 3))
print(%d)
-- ERROR:
File "XXXX", line 6
    print(%d)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:29:57) 
-- CODE:
from math import*
v = float(input("Pontos de vida: "))
vd1 =  int(input("Dado 1: "))
vd2 = int(input("Dado 2: "))
d = int(sqrt(5 * vd1) + (pi ** vd2 / 3))
print(d)
-- OUTPUT:
322
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:31:16) 
-- CODE:
from math import*
v = float(input("Pontos de vida: "))
vd1 =  int(input("Dado 1: "))
vd2 = int(input("Dado 2: "))
d = int(sqrt(5 * vd1) + (pi ** vd2 / 3))
print(int(v - d)
-- ERROR:
File "XXXX", line 7
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:31:33) 
-- CODE:
from math import*
v = float(input("Pontos de vida: "))
vd1 =  int(input("Dado 1: "))
vd2 = int(input("Dado 2: "))
d = int(sqrt(5 * vd1) + (pi ** vd2 / 3))
print(int(v - d))
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:32:52) 
-- CODE:
from math import*
v = float(input("Pontos de vida: "))
vd1 =  int(input("Dado 1: "))
vd2 = int(input("Dado 2: "))
d = int(sqrt(5 * vd1) + (pi ** (vd2 / 3)))
print(int(v - d))
-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:33:00) 
-- CODE:
from math import*
v = float(input("Pontos de vida: "))
vd1 =  int(input("Dado 1: "))
vd2 = int(input("Dado 2: "))
d = int(sqrt(5 * vd1) + (pi ** (vd2 / 3)))
print(int(v - d))
-- EXECUTION TIME:
0.180964
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
